<resources>
    <string name="app_name">Apartment Likes NDA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Welcome</string>
    <string name="menu_gallery">List Apt "Likes"</string>
    <string name="menu_slideshow">Add an Apt</string>
    <string name="navheadertitle">Apartment\n\"Likes\" </string>
    <string name="homeline1">Make your apartment hunting easier!</string>
    <string name="homeline2">Use this app to track your favorite showings</string>
    <string name="homemainparagraph">You can track your favorites by recording number of bedrooms, number of bathrooms and special notes including parking situations, trash collection, doorman facilities, storage and laundry facilities.</string>
    <string name="addanewlike">Add a new \"Like\"</string>
    <string name="addressprompt">Address:</string>
    <string name="bedroomsprompt">Number of Bedrooms:</string>
    <string name="bathsprompt">Number of Baths:</string>
    <string name="rentprompt">Monthly Rent? $</string>
    <string name="nodecimal">(no decimal)</string>
    <string name="notesprompt">special notes here...</string>
    <string name="addressinput" />
    <string name="bedroomsinput" />
    <string name="bedroomsinputt" />
    <string name="bathsinput" />
    <string name="rentinput" />
    <string name="notesinput" />
    <string name="hereareyourlikes">Here are your \"Likes\":</string>
    <string name="output" />
    <string name="aptlikebtn">ADD THIS APT \"LIKE\"</string>
    <string name="apartmentlikestracker2">Apartment \n Likes \n Tracker</string>
</resources>